# Desafio_II

./: README.md
FIFA2026_Simulador/: CMakeLists.txt
FIFA2026_Simulador/importAndExport/export/: minutos-jugados.csv
FIFA2026_Simulador/include/: Bombo.h  GestorData.h  Grupo.h  equipo.h  jugador.h  partido.h  torneo.h  vector.h
FIFA2026_Simulador/src/: Bombo.cpp  GestorData.cpp  Grupo.cpp  equipo.cpp  jugador.cpp  main.cpp  torneo.cpp
docs/: 01-carga-dato.md  02-clasificatoria-de-grupos.md
entregable_1/: entregable_1.md
